feat: add playlist full crud
